# memoryintelligence-python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: api_reference.md  authentication.md  encryption.md  enterprise.md  faq.md  licensing.md  migration_v1_to_v2.md  openapi.yaml  quickstart.md
memoryintelligence/: README.md  __init__.py  _async_client.py  _auth.py  _capture.py  _client.py  _crypto.py  _edge_client.py  _errors.py  _http.py  _license.py  _models.py  _utils.py  _version.py  py.typed
tests/: __init__.py  conftest.py  test_capture.py  test_client.py  test_crypto.py  test_edge_client.py  test_errors.py  test_integration.py  test_license.py  test_sdk.py  test_security.py
